adding team.html for example

--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">will</h2>
+        <h2 class="card-title">Mike Jones</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 22</li>
-            <li class="list-group-item">Email: <a href="mailto:test@test">test@test</a></li>
-            <li class="list-group-item">Office number: 3</li>
+            <li class="list-group-item">ID: 4521</li>
+            <li class="list-group-item">Email: <a href="mailto:Mike@mail.com">Mike@mail.com</a></li>
+            <li class="list-group-item">Office number: 4159852455</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">jo</h2>
+        <h2 class="card-title">Sara Smith</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 34</li>
-            <li class="list-group-item">Email: <a href="mailto:test@ts">test@ts</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/git" target="_blank" rel="noopener noreferrer">git</a></li>
+            <li class="list-group-item">ID: 5844</li>
+            <li class="list-group-item">Email: <a href="mailto:Sara@mail.com">Sara@mail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/Sara44" target="_blank" rel="noopener noreferrer">Sara44</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">sara</h2>
+        <h2 class="card-title">John Doe</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 39</li>
-            <li class="list-group-item">Email: <a href="mailto:test">test</a></li>
-            <li class="list-group-item">School: test</li>
+            <li class="list-group-item">ID: 9854</li>
+            <li class="list-group-item">Email: <a href="mailto:John@mail.com">John@mail.com</a></li>
+            <li class="list-group-item">School: Vanderbilt</li>
         </ul>
     </div>
 </div>
